# segmentation.evaluation

./: .gitignore  noxfile.py  pyproject.toml
segeval/: format.py
segeval/data/: jsonutils.py
segeval/similarity/distance/: multipleboundary.py
segeval/util/: __init__.py  test.py
src/segeval/data/: tsv.py
tests/: test_module.py
tests/test_data/: test_data.py  test_jsonutils.py  test_tsv.py
tests/test_similarity/: test_boundary.py  test_segmentation.py  test_similarity.py
tests/test_similarity/test_boundary_package/: test_multipleboundary.py
tests/test_util/: test_util.py
tests/test_window/: test_pk.py  test_windowdiff.py
