[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "segeval"
authors = [{name = "Chris Fournier", email = "chris.m.fournier@gmail.com"}]
readme = "README.rst"
version = "2.0.11"
description = "A package providing text segmentation evaluation metrics and utilities"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Text Processing',
    'Topic :: Utilities',
    'Programming Language :: Python :: 2.6',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.2',
    'Programming Language :: Python :: 3.3'
]

[project.urls]
Source = "https://github.com/cfournie/segmentation.evaluation"
Documentation = "http://segeval.readthedocs.org/"
