[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "segeval"
authors = [{name = "Chris Fournier", email = "chris.m.fournier@gmail.com"}]
readme = "README.rst"
version = "2.0.11"
description = "A package providing text segmentation evaluation metrics and utilities"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Text Processing',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.1",
    "pytest-cov >=2.12.0",
    "pytest-xdist >=3.2.0",
]
dev = [
    "black >=23.1.0",
    "segeval[test]",
    "flake8 >=6.0.0",
    "isort >=5.12.0",
    "pycln >=2.1.3",
    "twine",
]

[project.urls]
Source = "https://github.com/cfournie/segmentation.evaluation"
Documentation = "http://segeval.readthedocs.org/"
